Thu Oct  12 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkoptions.c, flags dir: Added new dialog to set language

Thu Oct  5 23:51:15 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Fix compiler warnings without USE_PYTHON after last
	commit

Wed Oct  4 14:18:35 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am analysis.c, analysis.h, formatgs.c, formatgs.h, html.c,
	text.c: minor changes to allow "relational show details"
	* database, database.example: rename
	* gtkgame.c, gtkgame.h, gtkrelational.c, gtkrelational.h,
	relational.c: detailed player stats in the CL version. List of all
	player stats and details upon double-clicking in the GUI.

Wed Oct  4 11:58:50 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtktoolbar.c: make sure labels are shown
	* .cvsignore: add linked files 

Mon Oct  2 00:49:27 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* several: compiler warnings mainly on 64bit platforms. Avoid casting
	integer to pointer and back.

Sat Sep 30 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Fix minor edit bug (labels dissappearing when panels moved)

Sun Sep 24 06:12:42 2006 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* makebearoff.c: Fix typo: #include <sys/types.h>.

Wed Sep 20 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Save full screen state and show pip count

Mon Sep 18 22:17:39 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* misc: Keith Count 

Wed Sep 13 21:42:45 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtk*, Makefile.am: Cleanup after modal comit

Wed Sep 13 21:38:50 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* sgf.c: make save/load locale independent

Mon Sep 11 23:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkwindows.c+.h, lots of gtk files: Move dialog code to new file
	Fixed modal dialog z order problems (mainly on windows)

Sat Sep  9 14:11:25 CEST 2006 Christian Anthon <anthon@kiku.dk>
